add place holders for hero image, about us, instructors, timetable, footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,32 @@
             </nav>
 
         </header>
-        
+
+        <!--Hero Image of Beach / People doing Yoga on Beach-->
+        <!--Maybe some splash text across/under.. Too much repition with titel in nav bar?-->
+
+        <section>
+
+            <div>Hero Image</div>
+            <div>Splash text across hero image</div>
+
+        </section>
+
+        <section>            
+            <div>About Us / What types of Yoga</div>
+            <div>Instructors Introduction</div>
+        </section>
+
+        <section>
+            <div>Classes Timetable</div>
+            <div>Fieldset map of Beach</div>
+
+        </section>
+
+        <footer>
+            <div>Social Media Links</div>
+        </footer>
+
 
     </body>
 
