add hero image placeholder image and test sizing

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <!--Hero Image of Beach / People doing Yoga on Beach-->
         <!--Maybe some splash text across/under.. Too much repition with titel in nav bar?-->
 
-        <section>
+        <section id="hero-outer">
 
-            <div>Hero Image</div>
-            <div>Splash text across hero image</div>
+            <div id="hero-image">Hero Image</div>
+            
 
         </section>
 
