add font awesome script and style logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>Duncannon Yoga Club</h1>
+            <h1>Duncannon Yoga Club <i class="fa-solid fa-yin-yang"></i> </h1>
 
             <nav>
                 <ul>
@@ -47,6 +47,8 @@
             <div>Social Media Links</div>
         </footer>
 
+        <!--font awesome script-->
+        <script src="https://kit.fontawesome.com/a8f439a63c.js" crossorigin="anonymous"></script>
 
     </body>
 
