add some style to nav bar and logo

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <header>
-            <h1>Duncannon Yoga Club <i class="fa-solid fa-yin-yang"></i> </h1>
+            <h1 id="logo">Duncannon Yoga Club <i class="fa-solid fa-yin-yang"></i> </h1>
 
             <nav>
-                <ul>
+                <ul id="nav-menu">
                     <li>Home</li>
                     <li>Gallery</li>
                     <li>Contact</li>
@@ -23,7 +23,7 @@
         </header>
 
         <!--Hero Image of Beach / People doing Yoga on Beach-->
-        <!--Maybe some splash text across/under.. Too much repition with titel in nav bar?-->
+        <!--Maybe some splash text across/under.. Too much repition with title in nav bar?-->
 
         <section id="hero-outer">
 
