--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
     <section>
         <div>
             <h2>About Us / What types of Yoga</h2>
-            <p>Yin Yoga</p>
-            <p>Hatha Yoga</p>
-            <p>Gentle Yoga / Meditation</p>
+            <h3>Yin Yoga</h3>
+            <p>Yin Yoga is slow-paced style of yoga as exercise, incorporating principles of traditional Chinese medicine, with asanas (postures) that are held for longer periods of time than in other styles.</p>
+            <h3>Hatha Yoga</h3>
+            <p>Hatha yoga can be considered an umbrella term to describe many of the most common forms of yoga taught in the West today. </p>
+            <h3>Gentle Yoga / Meditation</h3>
+            <p>Gentle yoga is essentially what it sounds like—a gentler style of hatha yoga practice. It is performed at a slower pace, with less intense positions, and usually includes extended time for meditation, yogic breath work, and relaxation.</p>
+            
 
         </div>
         <div>Instructors Introduction</div>
