create contact us page and made nav bar responsive

--- a/contact-us.html
+++ b/contact-us.html
@@ -24,10 +24,10 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="tutorials.html" class="active">Tutorials</a>
+                    <a href="tutorials.html">Tutorials</a>
                 </li>
                 <li>
-                    <a href="contact-us.html">Contact Us</a>
+                    <a href="contact-us.html" class="active">Contact Us</a>
                 </li>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
 
     <section>
         <div>
-            <h2>Tutorial Gallery</h2>
+            <h2>TContact Us</h2>
             
         </div>
         
@@ -57,5 +57,3 @@
 </body>
 
 </html>
-
-
