--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="tutorials.html">Tutorials</a>
                 </li>
                 <li>
-                    <a href="#">Contact Us</a>
+                    <a href="contact-us.html">Contact Us</a>
                 </li>
             </ul>
         </nav>
