--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
               </div>
         
               <div id="footer-section-right">
-                Something
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                        <iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=duncannon%20beach&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <a href="https://www.whatismyip-address.com"></a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style>
+                        <a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style>
+                    </div>
+                </div>
               </div>
         </div>
         
