add embedded youtube video what-is-yoga

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         <div>Instructors Introduction</div>
     </section>
 
+    <section id="what-is-yoga">
+
+    <iframe width="600px" height="600px" src="https://www.youtube.com/embed/XLk5yks9c_Q"></iframe>
+    </section>
+
     <footer>
         <div id="footer-section">
             <div id="footer-section-left">
@@ -91,7 +96,7 @@
             </div>
         
               <div id="footer-section-center">
-                <ul>
+                <ul id="social-media">
                     <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook site, opens in new tab">Find us on facebook<i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter site, opens in new tab">Tweet @ us on twitter<i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube site, opens in new tab">Check out our Videos on Youtube<i class="fa-brands fa-youtube"></i></a></li>
