add placeholder cover text over hero image, not sure how i feel about it

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
 
         <div id="hero-image">Hero Image</div>
 
+        <div id="cover-text">
+            <h2 class="center-our-story">Our Story <i class="fa-solid fa-yin-yang"></i> </h2>
+            <p class="center-our-story">Duncannon Yoga Club was founded by Denise Dwyer in 2016 encouraged by her husband to get somewhere of her own after years of teaching in local halls and on the local beach.
+                It was her own little private quiet space when she opened and unexpectedly the studio community has been building ever since. It has continued to grow into a local haven where people can come to escape the craziness of their everyday lives. 
+                But staying true to her roots she still teaches a class every Sunday morning 9am on the beach
+                </p>
+           
+
+        </div>
+
     </section>
 
 
